test-repo-gcp-main/microservices/base/dispatcher.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "dispatcher-final"
  namespace: hyperexecute
  labels:
    name: "dispatcher"
spec:
  selector:
    matchLabels:
      name: dispatcher
  template:
    metadata:
      labels:
        name: dispatcher
    spec:
      serviceAccountName: dispatcher
      containers:
        - name: "dispatcher"
          image: "hyperexecuteonprem.azurecr.io/dispatcher:ee11c2b0d5becb670d2ab81736659b4d79af4672"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 2
            initialDelaySeconds: 10
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 512Mi
              cpu: 1000m
            requests:
              memory: 260Mi
              cpu: 500m
      terminationGracePeriodSeconds: 1800  # 30 min
      imagePullSecrets:
        - name: hyperexecute-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: "dispatcher-final"
  namespace: hyperexecute
  labels:
    name: "dispatcher"
spec:
  selector:
    name: "dispatcher"
  ports:
    - port: 80
      targetPort: 3000
      protocol: "TCP"
