test-repo-gcp-main/microservices/base/job-artefacts.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "job-artefacts"
  namespace: hyperexecute
  labels:
    name: "job-artefacts"
spec:
  selector:
    matchLabels:
      name: job-artefacts
  template:
    metadata:
      labels:
        name: job-artefacts
    spec:
      serviceAccountName: job-artefacts
      containers:
        - name: "job-artefacts"
          image: "hyperexecuteonprem.azurecr.io/job-artefacts:8d9733d07a6b1e6a88d34b27993a84a32a28d4d4"
          imagePullPolicy: Always
          ports:
            - containerPort: 9876
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /health
              port: 9876
              scheme: HTTP
            periodSeconds: 3
            initialDelaySeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 512Mi
              cpu: 1000m
            requests:
              memory: 256Mi
              cpu: 500m
      terminationGracePeriodSeconds: 1800  # 30 min              
      imagePullSecrets:
        - name: hyperexecute-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: "job-artefacts"
  namespace: hyperexecute
  labels:
    name: "job-artefacts"
spec:
  selector:
    name: "job-artefacts"
  ports:
    - port: 80
      targetPort: 9876
      protocol: "TCP"
---
