test-repo-gcp-main/microservices/base/orchestrator.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "orchestrator"
  namespace: hyperexecute
  labels:
    name: "orchestrator"
spec:
  selector:
    matchLabels:
      name: orchestrator
  template:
    metadata:
      labels:
        name: orchestrator
    spec:
      serviceAccountName: orchestrator
      containers:
        - name: "orchestrator"
          image: "hyperexecuteonprem.azurecr.io/orchestrator:8e6231b95b98fb7003db3c49c958f39fd4f7703b"
          imagePullPolicy: Always
          ports:
            - containerPort: 9876
          readinessProbe:
            failureThreshold: 2
            initialDelaySeconds: 10
            httpGet:
              path: /health
              port: 9876
              scheme: HTTP
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 2Gi
              cpu: 1000m
            requests:
              memory: 256Mi
              cpu: 500m
      terminationGracePeriodSeconds: 1800  # 30 min              
      imagePullSecrets:
        - name: hyperexecute-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: "orchestrator"
  namespace: hyperexecute
  labels:
    name: "orchestrator"
spec:
  selector:
    name: "orchestrator"
  ports:
    - port: 80
      targetPort: 9876
      protocol: "TCP"
---
