test-repo-gcp-main/microservices/base/reception.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "reception"
  namespace: hyperexecute
  labels:
    name: "reception"
spec:
  selector:
    matchLabels:
      name: reception
  template:
    metadata:
      labels:
        name: reception
    spec:
      serviceAccountName: reception
      containers:
        - name: "reception"
          image: "hyperexecuteonprem.azurecr.io/reception:d979fd318222b4b041a29c2aff68aaa8fad971dc"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            periodSeconds: 3
            initialDelaySeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 256Mi
              cpu: 250m            
      imagePullSecrets:
        - name: hyperexecute-pull-secret
      terminationGracePeriodSeconds: 1800 # 4 hours
---
apiVersion: v1
kind: Service
metadata:
  name: "reception"
  namespace: hyperexecute
  labels:
    name: "reception"
spec:
  selector:
    name: "reception"
  ports:
    - port: 80
      targetPort: 3000
      protocol: "TCP"
---
