test-repo-gcp-main/microservices/base/vault.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "vault"
  namespace: hyperexecute
  labels:
    name: "vault"
spec:
  selector:
    matchLabels:
      name: vault
  template:
    metadata:
      labels:
        name: vault
    spec:
      serviceAccountName: vault
      containers:
        - name: "vault"
          image: "hyperexecuteonprem.azurecr.io/vault:00f603af43849f6b316e5b395e54a97ea3307200"
          imagePullPolicy: Always
          volumeMounts: []
          ports:
            - containerPort: 9876
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /health
              port: 9876
              scheme: HTTP
            periodSeconds: 3
            initialDelaySeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 512Mi
              cpu: 1000m
            requests:
              memory: 256Mi
              cpu: 500m
      imagePullSecrets:
        - name: hyperexecute-pull-secret
      terminationGracePeriodSeconds: 1800  # 30 min
---
apiVersion: v1
kind: Service
metadata:
  name: "vault"
  namespace: hyperexecute
  labels:
    name: "vault"
spec:
  selector:
    name: "vault"
  ports:
    - port: 80
      targetPort: 9876
      protocol: "TCP"
---
